--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -8,6 +8,7 @@
     
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.App" Version="8.0.4" />
+        <PackageReference Include="SharpGrip.FluentValidation.AutoValidation.Mvc" Version="1.4.0" />
     </ItemGroup>
     
     <ItemGroup>
