--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.2"/>
         <PackageReference Include="Mapster" Version="7.4.0" />
         <PackageReference Include="FluentValidation" Version="11.9.2" />
+        <PackageReference Include="Scrutor" Version="5.0.1" />
     </ItemGroup>
 
 </Project>
